findex/src/main/java/com/example/findex/global/error/ErrorResponse.java
package com.example.findex.global.error;

import java.time.LocalDateTime;

public record ErrorResponse(
    LocalDateTime timestamp,
    int status,
    String message,
    String details
) {

}
